--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "core-js": "^3.23.0",
         "regenerator-runtime": "^0.13.9",
         "vue": "^3.0",
+        "vue-loader": "^17.0.1",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
         "webpack-notifier": "^1.15.0"
