--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
         "@symfony/webpack-encore": "^4.0.0",
         "core-js": "^3.23.0",
         "regenerator-runtime": "^0.13.9",
+        "unplugin-auto-import": "^0.15.3",
+        "unplugin-vue-components": "^0.24.1",
         "vue": "^3.0",
         "vue-loader": "^17.0.1",
         "webpack": "^5.74.0",
@@ -21,5 +23,9 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "element-plus": "^2.3.3",
+        "vue-router": "^4.1.6"
     }
 }
